log
Fri 23 Sep 2022 11:31:44 AM UTC: 
 tests:  1|8
total_score: 0/70
37f4755
Fri 23 Sep 2022 11:51:30 AM UTC: 
 treemap.c | 7 +++++--
 1 file changed, 5 insertions(+), 2 deletions(-)
 tests:  4|7
total_score: 5/70
4c8d8eb
Fri 23 Sep 2022 12:03:00 PM UTC: 
 treemap.c | 10 ++++++++++
 1 file changed, 10 insertions(+)
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:76:20: error: expected expression before ‘TreeMap’
   76 |   TreeNode*  aux = TreeMap->root;
      |                    ^~~~~~~
Compilation failed
380ae49
Fri 23 Sep 2022 12:03:31 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:76:20: error: ‘Tree’ undeclared (first use in this function); did you mean ‘tree’?
   76 |   TreeNode*  aux = Tree->root;
      |                    ^~~~
      |                    tree
treemap.c:76:20: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
371cf4f
Fri 23 Sep 2022 12:08:33 PM UTC: 
 treemap.c | 11 ++++++-----
 1 file changed, 6 insertions(+), 5 deletions(-)
 tests:  4|7
total_score: 5/70
2d49f77
Fri 23 Sep 2022 12:17:34 PM UTC: 
 treemap.c | 18 +++++++++++-------
 1 file changed, 11 insertions(+), 7 deletions(-)
 tests:  0|0
2701eb6
Fri 23 Sep 2022 12:20:24 PM UTC: 
 treemap.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  4|7
total_score: 5/70
da49ee9
Fri 23 Sep 2022 12:20:43 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|7
total_score: 5/70
130ddd3
Fri 23 Sep 2022 12:23:56 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|7
total_score: 5/70
92eb4ca
Sat 24 Sep 2022 03:05:58 PM UTC: 
 treemap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  4|7
total_score: 5/70
bbcb319
